<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    tools:context=".MainActivity">


    <ru.kirill.unscramblewords.VisibilityText
        android:id="@+id/fail_text_view"
        tools:text="Fail"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:gravity="center"
        android:text="@string/failure"
        android:textColor="#FF0000"
        android:visibility="invisible"
        />
    <ru.kirill.unscramblewords.VisibilityText
        android:id="@+id/correct_text_view"
        tools:text="Correct"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:gravity="center"
        android:text="@string/correct"
        android:textColor="#00FF00"
        android:visibility="invisible"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <ru.kirill.unscramblewords.UnscrambleTextView
        android:id="@+id/unscramble_word_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Example shuffled word"
        android:gravity="center"
        android:textSize="36sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <ru.kirill.unscramblewords.InputView
        android:id="@+id/inputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ru.kirill.unscramblewords.InputView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <ru.kirill.unscramblewords.VisibilityButton
        android:id="@+id/checkButton"
        android:text="@string/check"
        android:layout_width="match_parent"
        android:backgroundTint="@color/red"
        android:layout_height="wrap_content"/>

    <ru.kirill.unscramblewords.VisibilityButton
        android:id="@+id/nextButton"
        android:text="@string/next"
        android:backgroundTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ru.kirill.unscramblewords.VisibilityButton
        android:id="@+id/skipButton"
        android:text="@string/skip"
        android:backgroundTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>